# breweries-api-data-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: breweries_pipeline.py
docs/: AI_INTERACTIONS.md  ARCHITECTURE.md  DECISIONS.md  EMAIL_SETUP.md  PLAN.md  PRACTICES_REVIEW.md
notebooks/: data_validation_medallion.ipynb
src/: __init__.py
src/api/: __init__.py  client.py
src/bronze/: __init__.py  loader.py
src/gold/: __init__.py  aggregator.py
src/silver/: __init__.py  transformer.py
tests/: conftest.py  test_api_client.py  test_bronze_loader.py  test_gold_aggregator.py  test_silver_transformer.py
